--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,11 @@
-# Test against this version of Node.js
+# Test against the latest version of this Node.js version
 environment:
-  matrix:
-  # node.js
-  - nodejs_version: "8"
+  nodejs_version: "6"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
-  -ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
 
@@ -16,7 +14,7 @@ test_script:
   # Output useful info for debugging.
   - node --version
   - npm --version
-  # run test
+  # run tests
   - npm test
 
 # Don't actually build.
