--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "clean-dist": "rimraf ./dist && mkdir dist",
     "prebuild": "npm-run-all clean-dist test",
     "build": "node buildScripts/build.js",
-    "postbuild": "node buildScripts/distServer.js",
-				"deploy": "surge ./dist"
+    "postbuild": "node buildScripts/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
@@ -40,7 +39,6 @@
     "cross-env": "3.1.3",
     "css-loader": "^0.28.11",
     "css-selector": "^0.1.0",
-    "deploy": "surge ./dist",
     "eslint": "3.8.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-watch": "2.1.14",
@@ -64,7 +62,6 @@
     "source-map": "^0.7.3",
     "style-loader": "^0.13.2",
     "style-selector": "^2.0.2",
-    "surge": "^0.20.1",
     "tapable": "1.0.0-beta.5",
     "ts-node": "^6.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
