--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
   "license": "MIT",
   "dependencies": {
     "awesome-typescript-loader": "^5.0.0-1",
+    "braces": "^3.0.2",
+    "extend": "^3.0.2",
     "fetch": "^1.1.0",
+    "hoek": "^6.1.3",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
     "typescript": "^2.9.1",
     "typings-for-css-modules-loader": "^1.7.0"
   },
@@ -49,7 +55,7 @@
     "jsdom": "9.8.0",
     "json-schema-faker": "^0.4.7",
     "json-server": "^0.14.0",
-    "localtunnel": "^1.9.0",
+    "localtunnel": "^1.9.1",
     "mocha": "3.1.2",
     "nglint": "0.0.0",
     "nock": "8.1.0",
