--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "braces": "^3.0.2",
     "extend": "^3.0.2",
     "fetch": "^1.1.0",
+    "growl": "^1.10.5",
     "hoek": "^6.1.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
